# ups-monitor

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
examples/: ups-monitor.yaml
src/: config.rs  install.rs  lib.rs  main.rs  monitor.rs  shutdown.rs  snmp.rs  ups.rs
systemd/: ups-monitor.service
