[package]
name = "ups-monitor"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-snmp = { version = "0.12.0", default-features = false, features = ["crypto-rustcrypto"] }
clap = { version = "=4.5.20", features = ["derive"] }
humantime-serde = "1.1"
indexmap = "=2.7.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
simplelog = "0.12"
thiserror = "1.0"
time = "=0.3.36"
tokio = { version = "1.52.3", features = ["rt", "time", "net"] }
